--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,8 +47,21 @@ body {
     }
     }
     img {
-    width: 600px;
-    padding-top: 50px;
+    padding: 100px;
+    width: 500px;
+    }
+    .image {
+    flex-basis: 40%;
+    }
+    .text {
+    font-size: medium;
+    font-weight: normal;
+    padding-left: 20px;
+    }
+    .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
     .right {
     float: left;
@@ -56,9 +69,80 @@ body {
     padding: 100px;
     height: 1215px;
     margin-top: 25px;
+    font-weight: normal;
+    text-align: center;
     }
     h1 {
     font-family: fantasy; 
     font-size: medium;   
-    padding: 50px;
+    padding: 25px;
     }
+    /* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 20px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 50px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  /* Add a background color and some padding around the form */
+  .container form {
+    border-radius: 5px;
+    padding: 20px;
+  }
+  .row img{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  /* Create four equal columns that sits next to each other */
+  .column image{
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  /* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column image{
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column img{
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+  footer {
+    text-align: center;
+    padding: 3px;
+    color: rgb(67, 50, 98);
+    width: 100%;
+  }
